--- a/adoption.html
+++ b/adoption.html
@@ -36,6 +36,7 @@
     Whether you’re looking to adopt a dog, cat, or other pets, we are here to guide you every step of the way. Our team is dedicated to ensuring that every adoption is a perfect match, bringing joy to both pets and their new owners.
     
     Join us in making a difference—one pet at a time.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti distinctio deserunt voluptate itaque maiores repellendus, commodi ducimus dolorum enim laudantium nam reprehenderit asperiores minus laborum repudiandae. Dolorem quaerat hic atque.</p>
    </section>
    <section>
     <h4>Pets that are available for adoption</h4>
