changes in list and title

--- a/adoption.html
+++ b/adoption.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FAMILY PET</title>
+    <title>NO PETS</title>
     <link rel="stylesheet" href="adoption.css">
 </head>
 
@@ -11,9 +11,10 @@
     <header>
         <nav>
             <ul>
-                <li>My Pet</li>
-                <li>Home</li>
-                <li>About us</li>
+                <li>NO PET</li>
+                <li>NO HOME</li>
+                <li>NO US</li>
+                <li>NO LOVE</li>
             </ul>
         </nav>
     </header>
