--- a/adoption.html
+++ b/adoption.html
@@ -11,9 +11,10 @@
     <header>
         <nav>
             <ul>
-                <li>My Pet</li>
-                <li>Home</li>
-                <li>About us</li>
+             <p> im hungry</p>   
+               <p> im still hungry </p> 
+              <p> i was hungry</p>      
+             <p> will i still be hyngry</p>  
             </ul>
         </nav>
     </header>
