--- a/adoption.html
+++ b/adoption.html
@@ -12,10 +12,10 @@
         <nav>
             <ul>
 
-             <p> im hungry</p>   
-               <p> im still hungry </p> 
-              <p> i was hungry</p>      
-             <p> will i still be hyngry</p>  
+            <h1>CHECK1</h1>  
+            <h1>CHECK2</h1> 
+            <h1>CHECK3</h1> 
+            <h1>CHECK4</h1> 
 
                 <li>NO PET</li>
                 <li>NO HOME</li>
