--- a/adoption.html
+++ b/adoption.html
@@ -12,10 +12,10 @@
         <nav>
             <ul>
 
-             <p> im hungry</p>   
-               <p> im still hungry </p> 
-              <p> i was hungry</p>      
-             <p> will i still be hyngry</p>  
+                <H1>ONE</H1>
+                <H1>ONE</H1>
+                <H1>ONE</H1>
+                <H1>ONE</H1>
 
                 <li>NO PET</li>
                 <li>NO HOME</li>
@@ -32,7 +32,7 @@
     </video>
 
     <section class="content">
-    <h1>Are you Ready?</h1>
+    <H1>ONE</H1>
     <a href="#">Come In:)</a>
     </section>
    </section>
